:memo: update docs